--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ɴᴇxᴛ ʟᴇᴠᴇʟ ᴍᴀʀᴋ</title>
+<title>𝐍𝐞𝐱𝐭_𝐋𝐞𝐯𝐞𝐥_𝐌𝐚𝐫𝐤</title>
 <style>
   /* Neon blue title */
   @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
@@ -122,7 +122,7 @@
 </head>
 <body>
 
-<h1>ɴᴇxᴛ ʟᴇᴠᴇʟ ᴍᴀʀᴋ</h1>
+<h1>𝐍𝐞𝐱𝐭_𝐋𝐞𝐯𝐞𝐥_𝐌𝐚𝐫𝐤</h1>
 
 <div class="marquee-container" aria-label="Motivational quote about technology">
   <div class="marquee-text">
@@ -144,24 +144,24 @@
     </tr>
   </thead>
   <tbody>
-    <tr><td>Monday</td><td>10:30 AM - 9:20 PM<br>10:20 PM - 5:00 PM</td></tr>
-    <tr><td>Tuesday</td><td>10:30 AM - 9:20 PM<br>10:20 PM - 5:00 PM</td></tr>
-    <tr><td>Wednesday</td><td>10:30 AM - 9:20 PM<br>10:20 PM - 5:00 PM</td></tr>
-    <tr><td>Thursday</td><td>10:30 AM - 9:20 PM<br>10:20 PM - 5:00 PM</td></tr>
-    <tr><td>Friday</td><td>10:30 AM - 9:20 PM<br>10:20 PM - 5:00 PM</td></tr>
+    <tr><td>Monday</td><td>10:30 AM - 5:20 PM<br>10:20 PM - 11:00 PM</td></tr>
+    <tr><td>Tuesday</td><td>10:30 AM - 5:20 PM<br>10:20 PM - 11:00 PM</td></tr>
+    <tr><td>Wednesday</td><td>10:30 AM - 5:20 PM<br>10:20 PM - 11:00 PM</td></tr>
+    <tr><td>Thursday</td><td>10:30 AM - 5:20 PM<br>10:20 PM - 11:00 PM</td></tr>
+    <tr><td>Friday</td><td>10:30 AM - 5:20 PM<br>10:20 PM - 11:00 PM</td></tr>
     <tr class="weekend"><td>Saturday</td><td>8:00 AM - 10:00 PM</td></tr>
     <tr class="weekend"><td>Sunday</td><td>8:00 AM - 10:00 PM</td></tr>
   </tbody>
 </table>
 
 <div class="social-container">
-  <a class="social-badge" href="https://wa.me/yourNumber" target="_blank" rel="noopener" aria-label="Contact us on WhatsApp">
+  <a class="social-badge" href="https://wa.me/254110550356" target="_blank" rel="noopener" aria-label="Contact us on WhatsApp">
     <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp icon" /> WhatsApp
   </a>
-  <a class="social-badge" href="https://instagram.com/yourProfile" target="_blank" rel="noopener" aria-label="Follow us on Instagram">
+  <a class="social-badge" href="https://instagram.com/next_level_mark" target="_blank" rel="noopener" aria-label="Follow us on Instagram">
     <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram icon" /> Instagram
   </a>
-  <a class="social-badge" href="https://t.me/yourUsername" target="_blank" rel="noopener" aria-label="Join us on Telegram">
+  <a class="social-badge" href="https://t.me/𝑹𝒊𝒌𝒐 𝑩𝒐𝒚" target="_blank" rel="noopener" aria-label="Join us on Telegram">
     <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram icon" /> Telegram
   </a>
 </div>
