--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     <div class="battery-level">
                         <div class="battery-fill" id="battery-fill"></div>
                     </div>
-                    <span id="battery-percent">85%</span>
+                    <span id="battery-percent">100%</span>
                 </div>
                 <div class="info-item">
                     <i class="fas fa-clock"></i>
@@ -386,9 +386,9 @@
         
         // Initial services
         const services = [
-            { name: "Digital Marketing", icon: "fa-bullhorn" },
+            { name: "Instagram unban", icon: "fa-bullhorn" },
             { name: "Web Development", icon: "fa-code" },
-            { name: "SEO Optimization", icon: "fa-chart-line" },
+            { name: "Whatsapp unban", icon: "fa-chart-line" },
             { name: "Social Media Management", icon: "fa-hashtag" },
             { name: "Brand Strategy", icon: "fa-chess-queen" },
             { name: "Content Creation", icon: "fa-pen-fancy" }
