--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             <input type="range" min="0" max="100" value="50" class="volume-slider" id="volume-slider">
         </div>
         <audio id="background-music" loop>
-            <source src="https://assets.mixkit.co/music/preview/mixkit-tech-house-vibes-130.mp3" type="audio/mp3">
+            <source src="https://files.catbox.moe/d1gplm.mp3">
         </audio>
     </div>
     
