--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
     </audio>
     
-    <h1>𝐍𝐄𝐗𝐓_𝐋𝐄𝐕𝐄𝐋_𝐌𝐀𝐑𝐊</h1>
+    <h1>𝐌𝐀𝐑𝐊</h1>
     
     <div class="info-container">
         <div class="info-item">
