--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             
             <!-- Welcome Text -->
             <div class="welcome-text">
-                𝚠𝙴𝙻𝙲𝙾𝙼𝙴 𝚃𝙾 𝙼𝚈 𝙾𝙵𝙵𝙸𝙲𝙸𝙰𝙻 𝚆𝙴𝙱 𝙿𝙰𝙶𝙴
+                𝖒𝖞 𝖔𝖋𝖋𝖎𝖈𝖎𝖆𝖑𝖜𝖊𝖇𝖘𝖎𝖙𝖊
             </div>
             
             <!-- Animation Bar -->
